@@ -1,6 +1,7 @@
 Revision 0.1.8
 --------------
 
+- ObjectIdentifier codec fixed to work properly with arc 0 and arc 2 values.
 - Unicode initializer support added to OctetString type and derivatives.
 - Fix to SEQUENCE and SET types to give them their private componentTypes
   collection (which is a NamedTypes object) so that they won't collide in
